Tries + read data

--- a/cpp_backend/CMakeLists.txt
+++ b/cpp_backend/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CliniQuery)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(CliniQuery src/main.cpp src/trieName.cpp)
+add_executable(CliniQuery src/main.cpp src/trieName.cpp src/trieSymp.cpp src/bplus.cpp)
